# CMakeLinuxCCTemplate

./: .gitignore  CMakeLists.txt  build-all-linux.sh  build-all-windows.sh  build-all.sh  build-debug-all.sh  build-debug-linux.sh  build-debug-windows.sh  build-release-all.sh  build-release-linux.sh  build-release-windows.sh
